# pnc-contract

./: Cargo.toml  build.sh  note.sh  vcc.py
neardev/: dev-account  dev-account.env
src/: lib.rs  lib2.rs  merkle.rs  mixer_verifier.rs  util.rs  zero.rs
